--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ nav ul li a {
     height: 50px;
     width: 250px;
     padding: 20px;
-    margin-right: auto;
+    margin: 0 auto;
   }
 
   nav ul li {
@@ -150,12 +150,18 @@ nav ul li a {
 /* desktop */
 
 @media screen and (min-width: 668px) {
+  header img {
+    margin-right: auto;
+    margin-top: 10px;
+    width: 200px;
+    padding-left: 20px;
+  }
   nav {
     justify-content: flex-start;
   }
 
   nav ul li {
-    margin: 0 20px;
+    margin: 20px 20px;
   }
 
   /* Logo */
