--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   --light-green: #46908c;
   --dark-green: #0a4346;
   --white: #fff;
-  --width: 100%;
+  --width: ;
   --box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -71,14 +71,40 @@ nav ul li a {
 }
 
 h3 {
-    color: #000; 
+  color: #000;
 }
 
-/* topic of the month */
-.topic-logo {
-    height: 300px;
-    width: var(--width);
-  }
+/* section flex containers */
+
+.health-container h2,
+.lifestyle-container h2 {
+  color: var(--white);
+  width: var(--width);
+  text-align: center;
+}
+
+.section-flex-container {
+  margin-top: 30px;
+  height: 500px;
+  width: var(--width);
+  display: flex;
+}
+
+.lifestyle-container,
+.health-container {
+  background-color: var(--light-green);
+  width: 500px;
+  height: auto;
+}
+
+.health-flex,
+.lifestyle-flex {
+  height: 350px;
+  width: var(--width);
+  margin: 10px;
+  box-shadow: var(--box-shadow);
+  background-color: var(--white);
+}
 
 /* mobile screen */
 
@@ -102,7 +128,7 @@ h3 {
 
   .links ul {
     background-color: #0a4346ac;
-    margin-top: 23px;
+    margin-top: 28px;
     height: 190px;
     width: 200px;
     align-items: center;
@@ -183,23 +209,43 @@ h3 {
     transform: translateX(0) translateY(-10px) rotate(-45deg);
   }
 
-  .hero {
+  .hero-img img {
+    object-position: top 0px left;
+    object-fit: cover;
     width: 100%;
   }
-  .hero img {
-    object-position: top 0px left;
+
+  .hero-img {
     width: 100%;
+    height: 400px;
     object-fit: cover;
-    height: 600px;
   }
 
   /* topic content */
-  
 
   .topic-logo img {
     height: auto;
     width: 70%;
     padding-left: 70px;
+    margin-top: 30px;
+  }
+
+  /* section flex containers */
+
+  .section-flex-container {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .lifestyle-container,
+  .health-container {
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .lifestyle-container h2,
+  .health-container h2 {
+    margin-top: 30px;
   }
 }
 
@@ -232,10 +278,6 @@ h3 {
     display: none;
   }
 
-  .hero {
-    position: relative;
-  }
-
   .hero-logo {
     background-image: url("../icons/logo-big.svg");
     background-size: contain;
@@ -248,11 +290,58 @@ h3 {
     top: 40%;
   }
 
-  .hero img {
-    height: 600px;
-    background-color: #000;
+  .hero {
+    position: relative;
+    width: var(--width);
     max-width: var(--width);
-    width: 100%;
+  }
+  .hero-img {
     object-fit: cover;
+    object-position: top 0px center 0px;
+  }
+
+  .hero img {
+    height: 700px;
+    object-fit: cover;
+    width: var(--width);
+    max-width: 100%;
+  }
+
+  /* topic of the month */
+
+  .topic-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .topic-logo {
+    margin-right: 20px;
+    flex: 0 0 auto;
+  }
+  .topic-logo img {
+    height: 200px;
+    padding-left: 20px;
+    width: var(--width);
+  }
+
+  .topic-content {
+    flex: 1 1 auto;
+  }
+
+  /* section flex container */
+  .section-flex-container {
+    flex-direction: row;
+  }
+
+  .health-container {
+    flex: 0 0 auto;
+    margin: 20px;
+    width: 50%;
+  }
+
+  .lifestyle-container {
+    flex: 1 1 auto;
+    margin: 20px;
+    width: 50%;
   }
 }
