--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,7 @@ h3 {
   #burger-menu {
     height: 20px;
     width: 20px;
+    cursor: pointer;
   }
 
   #burger-menu:hover {
@@ -275,6 +276,9 @@ h3 {
     background-color: var(--white);
     transform: translateX(0) translateY(-10px) rotate(-45deg);
   }
+
++
+}
 
   .hero-img img {
     object-position: top 0px left;
