--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,7 @@ h3 {
   #burger-menu {
     height: 20px;
     width: 20px;
+    cursor: pointer;
   }
 
   #burger-menu:hover {
@@ -268,11 +269,11 @@ h3 {
 
   #burger-menu:hover .bar.top {
     transform: translateX(0) translateY(10px) rotate(45deg);
-    background: #000;
+    background: var(--white);
   }
 
   #burger-menu:hover .bar.bottom {
-    background-color: #000;
+    background-color: var(--white);
     transform: translateX(0) translateY(-10px) rotate(-45deg);
   }
 
@@ -356,7 +357,9 @@ h3 {
   }
 
   .footer-info p {
-    margin-top: 10px;
+    margin-top: 30px;
+    padding-left: 0px;
+    text-align: center;
   }
 }
 
