--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,12 @@ header {
   justify-content: space-between;
   width: 100%;
   position: fixed;
-  z-index: 1;
+  /* styling below to prevent header to adjust while adjusting h1 headers (chatGPT) */
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 80px;
+  z-index: 999;
 }
 
 body {
@@ -171,6 +176,31 @@ h3 {
 .footer-links li {
   list-style: none;
   padding: 10px;
+}
+
+/* blog posts page */
+.blog-header {
+  height: 50px;
+  width: var(--width);
+}
+
+.blog-header h1 {
+  margin-top: 200px;
+}
+.blog-posts-container {
+  height: 600px;
+  max-width: var(--max-width);
+  margin: 30px auto;
+  flex-direction: column;
+  padding: 30px;
+  align-items: center;
+  font-size: 15px;
+}
+
+.blog {
+  background-color: #fff;
+  height: auto;
+  flex-direction: column;
 }
 
 /* mobile screen */
