--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --white: #fff;
   --width: 100%;
   --box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  --box-sizing: border-box;
 }
 
 header {
@@ -178,7 +179,7 @@ h3 {
   padding: 10px;
 }
 
-/* blog posts page */
+/* blog posts page  */
 .blog-header {
   height: 50px;
   width: var(--width);
@@ -186,21 +187,37 @@ h3 {
 
 .blog-header h1 {
   margin-top: 200px;
+  text-align: center;
+  color: var(--white);
 }
+
 .blog-posts-container {
-  height: 600px;
+  height: auto;
   max-width: var(--max-width);
-  margin: 30px auto;
+  margin: 0px auto;
   flex-direction: column;
   padding: 30px;
   align-items: center;
   font-size: 15px;
 }
 
+/* fetched blog posts from api */
 .blog {
-  background-color: #fff;
+  background-color: var(--white);
+  width: var(--width);
+  max-width: var(--width);
   height: auto;
   flex-direction: column;
+  box-sizing: var(--box-sizing);
+  padding: 20px;
+  box-shadow: var(--box-shadow);
+  margin-bottom: 20px;
+}
+
+.blog img {
+  margin-top: 10px;
+  width: var(--width);
+  box-shadow: var(--box-shadow);
 }
 
 /* mobile screen */
@@ -358,7 +375,7 @@ h3 {
   .lifestyle-flex {
     width: 100%;
     padding: 20px;
-    box-sizing: border-box;
+    box-sizing: var(--box-sizing);
   }
 
   /* footer */
@@ -426,7 +443,7 @@ h3 {
     background-image: url("../icons/logo-big.svg");
     background-size: contain;
     background-repeat: no-repeat;
-    box-sizing: border-box;
+    box-sizing: var(--box-sizing);
     height: 400px;
     width: 500px;
     margin-left: 30px;
