--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,10 @@ header {
   z-index: 999;
 }
 
+header a {
+  margin-top: 10px;
+}
+
 body {
   background-color: var(--light-green);
   margin: 0;
@@ -223,6 +227,42 @@ h3 {
   box-sizing: border-box;
 }
 
+/* full image popup */
+.full-image-container {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.full-image-popup {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  position: relative;
+}
+
+.full-image {
+  width: 100%;
+  height: auto;
+}
+
+.close-popup {
+  color: #fff;
+  font-size: 3rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px 20px 0 0;
+  cursor: pointer;
+}
+
 /* mobile screen */
 
 @media screen and (min-width: 250px) and (max-width: 667px) {
@@ -245,7 +285,7 @@ h3 {
 
   .links ul {
     background-color: #0a4346ac;
-    margin-top: 28px;
+    margin-top: 38px;
     height: 190px;
     width: 200px;
     align-items: center;
