--- a/css/styles.css
+++ b/css/styles.css
@@ -195,6 +195,7 @@ h3 {
   color: var(--white);
 }
 
+.specific-blog-container,
 .blog-posts-container {
   height: auto;
   max-width: var(--max-width);
@@ -205,7 +206,10 @@ h3 {
   font-size: 15px;
 }
 
+
+
 /* fetched blog posts from api */
+.specific-content,
 .blog {
   background-color: var(--white);
   width: var(--width);
@@ -241,6 +245,32 @@ h3 {
   box-sizing: var(--box-sizing);
   width: 450px;
 }
+
+/* specific blogpost page */
+
+.return-link,
+.return-link a {
+  box-sizing: var(--box-sizing);
+  height: 50px;
+  width: 200px;
+  margin-top: 100px;
+  font-size: 15px;
+  color: var(--white);
+  text-decoration: none;
+  padding: 20px;
+}
+
+.specific-content p,
+.specific-content h1 {
+  text-align: center;
+}
+
+.content {
+width: var(--width);
+padding: 20px;
+box-sizing: var(--box-sizing);
+}
+
 
 /* mobile screen */
 
