--- a/css/styles.css
+++ b/css/styles.css
@@ -94,9 +94,15 @@ h3 {
 }
 
 .slides {
+  box-sizing: border-box;
   display: flex;
-  width: 100%;
+  width: 70%;
   height: 100%;
+}
+
+.slides img {
+  height: auto;
+  width: 200px;
 }
 
 .slider-btns {
@@ -110,8 +116,9 @@ h3 {
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
-  background-color: #333;
+  background-color: var(--light-green);
   color: #fff;
+  box-shadow: var(--box-shadow);
   cursor: pointer;
 }
 
