--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ h3 {
   margin: 10px auto;
 }
 
+.view-more-btn,
 .slider-btns button {
   margin: 0 10px;
   padding: 10px 20px;
@@ -119,6 +120,10 @@ h3 {
   color: #fff;
   box-shadow: var(--box-shadow);
   cursor: pointer;
+  border-radius: 3px;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  letter-spacing: 0.15rem;
 }
 
 .slider-content {
@@ -132,10 +137,9 @@ h3 {
   font-size: 15px;
 }
 
-.slider-content a  {
+.slider-content a {
   text-decoration: none;
   color: #000;
-
 }
 
 /* section flex containers */
@@ -192,7 +196,6 @@ h3 {
     transform: rotate(360deg);
   }
 }
-
 
 /* footer */
 .blog-footer {
@@ -364,48 +367,27 @@ h3 {
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
-/* Modal Content/Box */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-}
 
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  max-width: 800px;
-}
-
-.modal img {
+.view-more-btn {
+  background-color: var(--white);
+  color: var(--dark-green);
+  margin: 20px auto;
   display: block;
-  max-width: 100%;
-  height: auto;
-  margin: 0 auto;
+  box-sizing: border-box;
+  height: 50px;
+  width: 200px;
+ 
+
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
+.view-more-btn:not([disabled]):hover {
+  box-shadow: 0 1px 9px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+  transition: all 200ms ease-in-out;
+}
+
+.view-more-btn[disabled] {
+  background-color: #eaeaea !important;
 }
 
 /* mobile screen */
