blogcontent styled when clicket prevbtn

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ nav ul li a {
 .section-header h2 {
   font-size: 50px;
   padding-top: 10px;
+  color: #fff;
 }
 
 h3 {
@@ -81,7 +82,10 @@ h3 {
   background-color: var(--white);
   margin-top: 40px;
   margin: 20px;
-  box-shadow: var(--box-shadow);
+}
+
+.latest-container {
+  background-color: var(--light-green);
 }
 
 /* latest post content */
@@ -95,8 +99,9 @@ h3 {
 .slides {
   box-sizing: border-box;
   display: flex;
-  width: 70%;
+  width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .slides img {
@@ -128,10 +133,13 @@ h3 {
 }
 
 .slider-content {
-  height: 400px;
-  width: 300px;
+  height: auto;
   margin: 20px;
   box-shadow: var(--box-shadow);
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  background-color: var(--white);
 }
 
 .slider-content h2 {
@@ -141,6 +149,17 @@ h3 {
 .slider-content a {
   text-decoration: none;
   color: #000;
+}
+
+.slider-content img {
+  height: auto;
+  width: 150px;
+  margin: 0 px;
+  padding: 10px;
+}
+
+.slider-content p {
+  font-size: 12px;
 }
 
 /* section flex containers */
@@ -296,6 +315,7 @@ textarea {
   margin-left: 20px;
 }
 
+
 .footer-row-2 {
   margin-top: 70px;
 }
@@ -330,7 +350,7 @@ textarea {
 
 .footer-links li {
   list-style: none;
-  padding: 10px;
+  padding: 0px;
 }
 
 /* blog posts page  */
