--- a/css/styles.css
+++ b/css/styles.css
@@ -177,29 +177,25 @@ h3 {
   display: flex;
   align-items: center;
   width: 800px;
+  margin: 60px auto;
+  height: auto;
 }
 
 .topic-logo {
   margin-right: 20px;
   flex: 0 0 auto;
 }
+
 .topic-logo img {
   height: 200px;
   padding-left: 20px;
   width: var(--width);
 }
 
-.topic-info {
-  background-color: #eaeaea;
-  height: 300px;
-  flex: 1 0;
-}
-
 .topic-content {
-  background-color: red;
-  flex: 2 0;
-  width: 600px;
-  display: flex;
+  height: 400px;
+  width: 200px;
+  margin-right: 200px;
 }
 
 .latest-blogpost {
@@ -543,7 +539,7 @@ textarea {
 
   .links ul {
     background-color: #0a4346ac;
-    margin-top: 28px;
+    margin-top: 23px;
     height: 160px;
     width: 120px;
     align-items: end;
@@ -560,7 +556,8 @@ textarea {
     height: 10px;
     width: 100px;
     padding-top: 20px;
-    margin-left: 50px;
+    margin-left: 20px;
+    box-sizing: border-box;
   }
 
   .links ul {
@@ -586,7 +583,7 @@ textarea {
 
   #burger-container {
     display: block;
-    margin-left: 50px;
+    margin-left: 80px;
     height: 15px;
     width: 60px;
   }
@@ -638,12 +635,21 @@ textarea {
     object-fit: cover;
   }
 
-  /* lates content */
+  /* latest content */
 
   .latest-container {
     height: 900px;
-    width: 100%;
+    width: 80%;
     margin-bottom: 250px;
+    margin: 0 auto;
+  }
+
+  .section-header {
+    max-width: 100%;
+  }
+  .section-header h2 {
+    width: 400px;
+    font-size: 25px;
   }
 
   .slides {
@@ -663,10 +669,17 @@ textarea {
   .slider-btns {
     margin-bottom: 50px;
   }
+
   button {
     margin-bottom: 20px;
   }
+
   /* topic content */
+
+  .latest-blogpost {
+    flex-direction: row;
+    margin: 20px auto;
+  }
 
   .topic-container {
     margin-top: 450px;
@@ -677,8 +690,9 @@ textarea {
 
   .topic-logo img {
     height: auto;
-    width: 70%;
+    width: 100%;
     margin: 20px auto;
+    margin-left: 0px;
     display: flex;
     margin-bottom: 20px;
   }
@@ -686,6 +700,7 @@ textarea {
   .topic-content {
     width: 400px;
     height: 20px;
+    margin: 0 auto;
   }
 
   /* section flex containers */
@@ -703,7 +718,7 @@ textarea {
   .lifestyle-container,
   .health-container {
     margin: 0 auto;
-    width: var(--width);
+    width: 350px;
     max-width: var(--width);
     padding-right: 20px;
     box-sizing: border-box;
@@ -726,19 +741,22 @@ textarea {
   .blog-footer {
     height: auto;
     width: var(--width);
+    box-sizing: border-box;
+    align-items: center;
   }
+
   .footer-row-1 {
     margin: 0 auto;
+    align-items: center;
+    height: 80px;
+    margin-left: 20px;
+    display: flex;
   }
 
   .footer-logo {
-    height: 80px;
-    margin: 20px auto;
-  }
-
-  .footer-logo img {
     height: 30px;
-    margin-top: 30px;
+    margin: 20px auto;
+    margin-left: 80px;
   }
 
   .footer-row-2 {
@@ -746,10 +764,26 @@ textarea {
     margin: 0 auto;
   }
 
+  .footer-row-2 h3 {
+    padding-right: 100px;
+  }
+
   .footer-info p {
-    margin-top: 30px;
+    margin: 20px auto;
     padding-left: 0px;
     text-align: center;
+  }
+
+  .footer-links {
+    margin: 0 auto;
+  }
+
+  .footer-links li {
+    padding: 5px;
+  }
+  .blog-footer h5 {
+    margin: 0px auto;
+    padding: 20px;
   }
 }
 
