--- a/css/styles.css
+++ b/css/styles.css
@@ -85,10 +85,12 @@ h3 {
   width: 100%;
   height: 70%;
   box-sizing: border-box;
+  align-items: center;
 }
 
 .slides {
   box-sizing: border-box;
+  margin: 0 auto;
   display: flex;
   width: 800px;
   height: 100%;
@@ -161,7 +163,8 @@ h3 {
 
 .topic-container {
   display: flex;
-  margin-top: 50px;
+  max-width: 700px;
+  margin: 100px auto;
 }
 
 .topic-logo {
@@ -170,11 +173,10 @@ h3 {
 
 .topic-logo img {
   height: 200px;
-  padding-left: 20px;
-  padding-right: 50px;
-  margin-top: 70px;
-
+  margin-top: 50px;
+  box-sizing: border-box;
   width: var(--width);
+  height: auto;
 }
 
 .topic-content {
@@ -798,6 +800,7 @@ textarea {
     margin: 0 auto;
     align-items: center;
     height: 80px;
+    width: var(--width);
     margin-left: 20px;
     display: flex;
   }
@@ -808,6 +811,7 @@ textarea {
     margin-left: 80px;
   }
 
+  .footer-row-1,
   .footer-row-2 {
     padding: 0px;
     margin: 0 auto;
@@ -830,8 +834,9 @@ textarea {
   .footer-links li {
     padding: 5px;
   }
-  .blog-footer h5 {
-    margin: 50px auto;
+  .footer-row-3 h5 {
+    margin: 0px auto;
+    text-align: center;
   }
 }
 
