--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,51 @@ h3 {
   width: 800px;
 }
 
+/* modal */
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  position: relative;
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.modal-content img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+}
+
 /* Loader */
 .loader {
   box-sizing: border-box;
@@ -778,10 +823,10 @@ textarea {
 
   .content img {
     display: block;
+    
     margin: 0 auto;
     height: 300px;
-    width: 500px;
-    max-width: var(--width);
+    max-width: 300px;
   }
 
   .content p {
