--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,10 @@ h3 {
   z-index: 9999;
 }
 
+.modal.show {
+  display: block;
+}
+
 .modal-content {
   position: absolute;
   top: 50%;
@@ -270,7 +274,7 @@ h3 {
   max-height: 90%;
 }
 
-.modal-img {
+.modal-image {
   display: block;
   max-width: 100%;
   max-height: 100%;
