--- a/css/styles.css
+++ b/css/styles.css
@@ -304,6 +304,16 @@ h3 {
   animation: spin 3s linear infinite;
 }
 
+.latest-loader {
+  margin-left: 400px;
+  margin-bottom: 100px;
+}
+
+.topic-loader {
+  margin: 100px auto;
+  margin-left: 100px;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
